Create a container for the list

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>To do List</title>
 </head>
 <body>
-    <h1>Hello webpack!</h1>
+    <main>
+        <div class="card">
+            <p class="list-item">Today's To Do</p>
+            <ul class="main-list">
+                
+            </ul>
+        </div>
+    </main>
 </body>
 </html>
