create an array of objects

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>To do List</title>
 </head>
@@ -15,14 +17,12 @@
     </div>
     <form>
         <input type="text" placeholder="Add to your list" id="item" aria-label="text" class="taskadder">
-        <i class="fas fa-level-down-alt fa-rotate-90"></i>
+        <i class="enter-icon">↵</i>
     <form>
         <ul id="duties">
 
         </ul>
-    <div class="clear">
-        <p><a href="#">Clear all completed</a></p>
-    </div>   
+    <button>Clear all completed</button>   
         
     
 </body>
